src/css/pages/home.scss
/* ... */
.case-studies {
  &__cta {
    position: relative;

    z-index: 1;

    width: fit-content;

    margin: 0 auto;
  }

  &__list {
    position: relative;

    display: flex;

    flex-direction: column;

    width: 100%;

    max-width: rem(1440);

    margin-bottom: rem(48);

    @media (min-width: rem(768)) {
      flex-direction: row;

      flex-wrap: wrap;
    }

    &__item {
      width: 100%;

      @media (min-width: rem(768)) {
        width: calc(100% / 3);
      }
    }
  }
}
/* ... */

